# skkk

./: .gitignore  CMakeLists.txt  cat.cpp  pi.cpp  testers.cpp
include/: LongNumskkk.hpp
src/: LongNumskkk.cpp
